<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/colorBlue"
        android:layout_height="match_parent"
        tools:context=".Activity.ActivityRegisterNewBusiness_4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:background="@drawable/round_corner"
            android:paddingLeft="20dp"

            android:paddingRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:id="@+id/progressBar4"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:max="5"
                android:scaleY="2"
                android:progress="4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout_b4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/textView26"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView26"
                app:layout_constraintTop_toTopOf="@+id/textView26">

                <RadioGroup
                    android:id="@+id/radioGroupfourth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RadioButton
                        android:id="@+id/radioButtonyes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="30dp"
                        android:backgroundTint="@color/colorBlue"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/yes" />

                    <RadioButton
                        android:id="@+id/radioButtonNo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/no" />
                </RadioGroup>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_layout_loanamount"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout_b4"
                tools:layout_editor_absoluteX="20dp">>

                <EditText
                    android:id="@+id/et_loanamount"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_height="wrap_content"
                    android:hint="@string/loanamount" />
            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/loanpurpose_spinner"


                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:layout_marginTop="40dp"
                android:entries="@array/loanpurposearray"
                app:layout_constraintEnd_toEndOf="@+id/et_layout_loanamount"
                app:layout_constraintStart_toStartOf="@+id/et_layout_loanamount"
                app:layout_constraintTop_toBottomOf="@+id/et_layout_loanamount" />

            <Button
                android:id="@+id/fourthbutton"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_login_button"
                android:text="@string/next"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/loanpurpose_spinner"
                app:layout_constraintStart_toStartOf="@+id/loanpurpose_spinner" />

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:layout_marginTop="40dp"
                android:text="@string/takenanyloan"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBar4" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_head_register_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/registernewbusiness"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_head_left"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_head_left" />


        <ImageView
            android:id="@+id/tv_head_left"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
