<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:background="#003F5A"
    android:layout_height="match_parent"
    tools:context=".Fragments.FragmentHome">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#F7F7F7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerviewmypanel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_regular"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newbusiness_button" />

        <Button
            android:id="@+id/newbusiness_button"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/add_button"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/addnewbusiness"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="0dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_profilepic"
                    android:layout_width="@dimen/dp_100"
                    android:layout_height="@dimen/dp_100"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/name"
                    android:fontFamily="@font/montserrat_regular"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/iv_profilepic"
                    app:layout_constraintTop_toTopOf="@+id/iv_profilepic" />

                <TextView
                    android:id="@+id/tv_supervisor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/supervisor"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/tv_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                <Button
                    android:id="@+id/editbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:background="@drawable/bg_login_button"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/edit"
                    android:visibility="gone"
                    android:drawableLeft="@drawable/editpencil"
                    android:textColor="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_supervisor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_supervisor"
                    app:layout_constraintTop_toTopOf="@+id/tv_name" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>